--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     background-color: seashell;
     margin: 0;
-    padding: 50;
+    padding: 0;
     color: #102552;
     font-family: sans-serif;
 }
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+    margin-top: 50px;
     padding: 50px;
     height: 110vh;
     display: flex;
